# ifopt_review

./: CMakeLists.txt  README.md
example/: ex_test_ipopt.cc  test_vars_constr_cost.h
example/towr/: CMakeLists.txt
example/towr/include/variables/: nodes_observer.h  nodes_variables.h  phase_durations.h  phase_durations_observer.h  polynomial.h  spline.h  state.h  variable_names.h
example/towr/src/: node_observer.cc  nodes_variables.cc  phase_durations.cc  phase_durations_observer.cc  polynomial.cc  spline.cc  state.cc
include/: bounds.h  composite.h  constraint_set.h  cost_term.h  ipopt_adapter.h  ipopt_solver.h  problem.h  solver.h  variable_set.h
src/: composite.cc  ipopt_adapter.cc  ipopt_solver.cc  leaves.cc  problem.cc
